# triangle-rs

./: .gitignore  Cargo.toml  README.md
shader/: Makefile
src/: main.rs
