[package]
name = "triangle-rs"
version = "0.1.0"
authors = ["maik klein <maikklein@googlemail.com>"]
edition = "2021"

[dependencies]
winit = "0.26.1"
image = "0.24.2"
ash = { version = "0.37.0", default-features = false, features = ["linked", "debug"] }
ash-window = "0.10.0"
vk-shader-macros = "0.2.8"